tests/e2e/keyword_or_service_argument.error
Error: syntax error in story at line 1, column 13

1|    http server from: "" or: "" // Idea is to demonstrate argument `or` is parsed successfully.
                  ^^^^^^^^

E0141: http action `server` does not accept argument `from`.
